--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-focus-lock": "^2.2.1",
+    "react-parallax": "^3.0.3",
+    "react-plx": "^1.3.15",
+    "react-scripts": "3.4.0",
+    "react-scroll-parallax": "^2.3.1",
+    "react-scrollable-anchor": "^0.6.1",
+    "react-single-page-navigation": "^1.0.1",
+    "styled-components": "^5.0.1",
+    "use-dencrypt-effect": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
