--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://mot667.github.io",
   "name": "tomtheboom.com",
   "version": "0.1.0",
   "private": true,
@@ -19,6 +20,8 @@
     "use-dencrypt-effect": "^1.0.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
