--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mot667.github.io",
+  "homepage": "https://mot667.github.io/",
   "name": "tomtheboom.com",
   "version": "0.1.0",
   "private": true,
